# Wisner-Backend

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 13986dd17c3e_004_create_order.py  5f3e21815bf3_002_banner_image.py  5f3e21815bf3_003_banner_image.py  6c08283bd8e7_005_add_users.py  a1ca59841855_001_create_products.py  aec020162b1d_001_create_products.py  d30a52bb981b_002_banner.py  e7877a75c5ea_001_create_products.py  f28b96c0f996_002_add_product_images_and_ingredients.py
app/: main.py
app/api/: api.py  banner_images.py  contact.py  coupons.py  deps.py  login.py  newsletter.py  pagos.py  products.py  user.py
app/core/: security.py
app/crud/: banner_images.py  coupons.py  newsletter.py  products.py  user.py
app/database/: database.py
app/models/: __init__.py  banner_images.py  contact.py  coupons.py  ingredients.py  newsletter.py  prepared_by.py  products.py  token.py  user.py
app/schemas/: banner_images.py  coupons.py  ingredients.py  newsletter.py  orders.py  pagopar.py  prepared_by.py  products.py  user.py
app/services/: pagopar.py
app/templates/emails/: contactenos.html  reset_password.html  resuscripcion.html  suscripcion.html
app/utils/: email.py  encode.py  recovery.py
